--- a/cometride-server/src/main/webapp/css/styles.css
+++ b/cometride-server/src/main/webapp/css/styles.css
@@ -43,6 +43,7 @@ body {
 .login-btn {
     background-color: transparent;
     border: 1px solid #C75B12;
+    border-radius: 0px;
     text-align: center;
     transition: all .2s ease-in-out;
     cursor: pointer;
