--- a/cometride-driverapp/DA/app/src/main/res/layout/activity_driver2.xml
+++ b/cometride-driverapp/DA/app/src/main/res/layout/activity_driver2.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#ffffffff"
-    tools:context="com.sandeep.da.Driver">
+    tools:context="com.sandeep.da.Driver2">
 
     <TextView
         android:id="@+id/cometride"
@@ -95,7 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="7"
+                android:text="9"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="#ff585858"
                 android:textSize="60sp" />
