--- a/cometride-driverapp/DA/app/src/main/res/layout/activity_options.xml
+++ b/cometride-driverapp/DA/app/src/main/res/layout/activity_options.xml
@@ -66,13 +66,14 @@
         android:orientation="horizontal"
         android:weightSum="1">
 
-        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+        <RadioGroup
+            android:id="@+id/radioGrp"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <RadioButton
-                android:id="@+id/radioButton"
+                android:id="@+id/radioButton1"
                 android:layout_width="wrap_content"
                 android:layout_height="63dp"
                 android:text="@string/seven_seater" />
