admin console UI small fix

--- a/cometride-server/src/main/webapp/css/popups.css
+++ b/cometride-server/src/main/webapp/css/popups.css
@@ -33,7 +33,7 @@
     width: 300px;
     height: 100%;
     top: 0;
-    z-index: 1001;
+    z-index: 9999;
     background-color: #008542;
     -webkit-box-shadow: 4px 0px 19px -5px rgba(0, 0, 0, 0.7);
     -moz-box-shadow: 4px 0px 19px -5px rgba(0, 0, 0, 0.7);
@@ -43,9 +43,19 @@
     /* enables momentum scrolling in iOS overflow elements */
 }
 
+.edit {
+    background-color: #C75B12;
+}
+
+.pushy h1 {
+    color: #fff;
+    padding-top: 30%;
+    padding-left: 6%;
+}
+
 .form {
-    max-width: 250px;
-    padding: 30% 0;
+    max-width: 88%;
+    padding: 10% 0;
     margin: 0 auto;
 }
 
@@ -53,15 +63,26 @@
     position: relative;
 }
 
+.form .btn-draw {
+    margin-top: 15%;
+}
+
 .btn-panel {
     background-color: transparent;
     border: 1px solid #fff;
     border-radius: 0px;
-    color: rgba(255,255,255,0.8);
+    color: #fff;
+    transition: all .2s ease-in-out;
 }
 
-.btn-panel:hover {
-    color: rgba(255,255,255,1);
+.create .btn-panel:hover, .create .btn-panel:focus {
+    background-color: #fff;
+    color: #008542;
+}
+
+.edit .btn-panel:hover, .edit .btn-panel:focus {
+    background-color: #fff;
+    color: #C75B12;
 }
 
 /* Menu Movement */
@@ -90,6 +111,15 @@
     -o-transform: translate3d(300px, 0, 0);
     transform: translate3d(300px, 0, 0);
 }
+
+.navbar-pushup {
+    -webkit-transform: translate3d(0, -80px, 0);
+    -moz-transform: translate3d(0, -80px, 0);
+    -ms-transform: translate3d(0, -80px, 0);
+    -o-transform: translate3d(0, -80px, 0);
+    transform: translate3d(0, -80px, 0);
+}
+
 /* Menu Transitions */
 
 .pushy,
@@ -103,13 +133,6 @@
     transition: all .3s cubic-bezier(0.420, 0.000, 0.580, 1.000);
 }
 
-.navbar-pushup {
-    -webkit-transform: translate3d(0, -80px, 0);
-    -moz-transform: translate3d(0, -80px, 0);
-    -ms-transform: translate3d(0, -80px, 0);
-    -o-transform: translate3d(0, -80px, 0);
-    transform: translate3d(0, -80px, 0);
-}
 /* Site Overlay */
 
 .site-overlay {
