--- a/cometride-server/src/main/webapp/css/popups.css
+++ b/cometride-server/src/main/webapp/css/popups.css
@@ -63,8 +63,20 @@
     position: relative;
 }
 
-.form .btn-draw {
+.form .label {
+    color: #fff;
+    font-size: 14px;
+}
+
+.form #btn-draw, .form #btn-edit {
     margin-top: 15%;
+    margin-bottom: 3px;
+}
+
+.btn-half-block {
+    width: calc(50% - 2px);
+    margin-top: 10%;
+    margin-bottom: 3px;
 }
 
 .btn-panel {
@@ -83,6 +95,26 @@
 .edit .btn-panel:hover, .edit .btn-panel:focus {
     background-color: #fff;
     color: #C75B12;
+}
+
+#btn-save {
+    background-color: rgba(255, 0,0,0.8);
+    border: red;
+}
+
+#btn-reverse {
+    background-color: rgba(255, 165, 0,0.8);
+    border: orange;
+}
+
+#btn-save:hover, #btn-save:focus {
+    background-color: red;
+    color:#fff;
+}
+
+#btn-reverse:hover, #btn-reverse:focus {
+    background-color: orange;
+    color: #fff;
 }
 
 /* Menu Movement */
