--- a/cometride-driverapp/DA/app/src/main/res/layout/activity_driver2.xml
+++ b/cometride-driverapp/DA/app/src/main/res/layout/activity_driver2.xml
@@ -56,7 +56,8 @@
         android:layout_width="match_parent"
         android:layout_height="315dp"
         android:background="#ffffffff"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_gravity="center">
 
         <LinearLayout
             android:layout_width="192dp"
@@ -102,7 +103,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="192dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="#ffffffff"
             android:orientation="vertical"
