--- a/cometride-driverapp/DA/app/src/main/res/layout/activity_main.xml
+++ b/cometride-driverapp/DA/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@ tools:context="com.sandeep.da.MainActivity"
 android:orientation="horizontal" >
 
 <ImageButton
-    android:id="@+id/imageButton1"
+    android:id="@+id/logo"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:adjustViewBounds="true"
