--- a/cometride-server/src/main/webapp/css/popups.css
+++ b/cometride-server/src/main/webapp/css/popups.css
@@ -49,7 +49,7 @@
 
 .pushy h1 {
     color: #fff;
-    padding-top: 30%;
+    padding-top: 10%;
     padding-left: 6%;
 }
 
@@ -59,7 +59,7 @@
     margin: 0 auto;
 }
 
-.form-control {
+.form-group .form-control {
     position: relative;
 }
 
@@ -73,7 +73,7 @@
     margin-bottom: 3px;
 }
 
-.btn-half-block {
+.half-block {
     width: calc(50% - 2px);
     margin-top: 10%;
     margin-bottom: 3px;
@@ -115,6 +115,38 @@
 #btn-reverse:hover, #btn-reverse:focus {
     background-color: orange;
     color: #fff;
+}
+
+.sb-box {
+    border: 1px solid #fff;
+    padding: 10px;
+    margin-top: 5px;
+}
+.sb-box label {
+    color: #fff;
+}
+
+.timepicker-set {
+    margin-top: 2px;
+    display: block;
+}
+
+.timepicker-set p {
+    display: inline-block;
+    color: #fff;
+}
+
+.timepicker-set .timepicker {
+    display: inline-block;
+    width: calc(50% - 10px);
+}
+
+#day-picker {
+    width: 100%;
+}
+
+#time-picker-buttons {
+    text-align: center;
 }
 
 /* Menu Movement */
