--- a/cometride-server/src/main/webapp/css/popups.css
+++ b/cometride-server/src/main/webapp/css/popups.css
@@ -1,25 +1,154 @@
 /* overlay */
 
+#wrapper {
+    position: relative;
+}
+
 .black_overlay {
-    display: none;
     position: absolute;
+    display: block;
     top: 0%;
     left: 0%;
     width: 100%;
     height: 200%;
     background-color: black;
-    z-index: 1001;
+    z-index: 9999;
     -moz-opacity: 0.8;
     opacity: .80;
     filter: alpha(opacity=80);
 }
 
 .white_content {
-    display: none;
     position: absolute;
+    display: block;
     left: 36%;
     width: 28%;
-    z-index: 1002;
+    z-index: 99999;
+}
+
+.card-container.card {
+    width: 350px;
+    padding: 40px 40px;
+}
+/*
+ * Card component
+ */
+
+.card {
+    background-color: #F7F7F7;
+    /* just in case there no content*/
+    
+    padding: 20px 25px 30px;
+    margin: 0 auto 25px;
+    margin-top: 50px;
+    /* shadows and rounded borders */
+    
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.profile-img-card {
+    width: 96px;
+    height: 96px;
+    margin: 0 auto 10px;
+    display: block;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
+/*
+ * Form styles
+ */
+
+.profile-name-card {
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    margin: 10px 0 0;
+    min-height: 1em;
+}
+
+.reauth-email {
+    display: block;
+    color: #404040;
+    line-height: 2;
+    margin-bottom: 10px;
+    font-size: 14px;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.form-signin #inputEmail,
+.form-signin #inputPassword {
+    direction: ltr;
+    height: 44px;
+    font-size: 16px;
+}
+
+.form-signin input[type=email],
+.form-signin input[type=password],
+.form-signin input[type=text],
+.form-signin button {
+    width: 100%;
+    display: block;
+    margin-bottom: 10px;
+    z-index: 1;
+    position: relative;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.form-signin .form-control:focus {
+    border-color: rgb(104, 145, 162);
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgb(104, 145, 162);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgb(104, 145, 162);
+}
+
+.btn-signin {
+    /*background-color: #4d90fe; */
+    
+    background-color: rgb(104, 145, 162);
+    /* background-color: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));*/
+    
+    padding: 0px;
+    font-weight: 700;
+    font-size: 14px;
+    height: 36px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    border: none;
+    -o-transition: all 0.218s;
+    -moz-transition: all 0.218s;
+    -webkit-transition: all 0.218s;
+    transition: all 0.218s;
+}
+
+.btn-signin:hover,
+.btn-signin:active,
+.btn-signin:focus {
+    background-color: rgb(12, 97, 33);
+}
+
+.forgot-password {
+    color: rgb(104, 145, 162);
+}
+
+.forgot-password:hover,
+.forgot-password:active,
+.forgot-password:focus {
+    color: rgb(12, 97, 33);
 }
 /* Container */
 
@@ -68,7 +197,8 @@
     font-size: 14px;
 }
 
-.form #btn-draw, .form #btn-edit {
+.form #btn-draw,
+.form #btn-edit {
     margin-top: 15%;
     margin-bottom: 3px;
 }
@@ -87,33 +217,48 @@
     transition: all .2s ease-in-out;
 }
 
-.create .btn-panel:hover, .create .btn-panel:focus {
+.create .btn-panel:hover,
+.create .btn-panel:focus {
     background-color: #fff;
     color: #008542;
 }
 
-.edit .btn-panel:hover, .edit .btn-panel:focus {
+.edit .btn-panel:hover,
+.edit .btn-panel:focus {
     background-color: #fff;
     color: #C75B12;
 }
 
-#btn-save {
-    background-color: rgba(255, 0,0,0.8);
+#btn-actual-draw {
+    background-color: rgba(255, 0, 0, 0.8);
     border: red;
 }
 
 #btn-reverse {
-    background-color: rgba(255, 165, 0,0.8);
+    background-color: rgba(255, 165, 0, 0.8);
     border: orange;
 }
 
-#btn-save:hover, #btn-save:focus {
-    background-color: red;
-    color:#fff;
+#btn-save {
+    background-color: #0099CC;
+    border: #0099CC;
 }
 
-#btn-reverse:hover, #btn-reverse:focus {
+#btn-actual-draw:hover,
+#btn-actual-draw:focus {
+    background-color: red;
+    color: #fff;
+}
+
+#btn-reverse:hover,
+#btn-reverse:focus {
     background-color: orange;
+    color: #fff;
+}
+
+#btn-save:hover,
+#btn-save:focus {
+    background-color: #0099CC;
     color: #fff;
 }
 
@@ -122,6 +267,7 @@
     padding: 10px;
     margin-top: 5px;
 }
+
 .sb-box label {
     color: #fff;
 }
@@ -149,6 +295,15 @@
     text-align: center;
 }
 
+#date-picker input {
+    display: inline-block;
+    width: calc(50% - 10px);
+}
+
+#date-picker p {
+    display: inline-block;
+    color: #fff;
+}
 /* Menu Movement */
 
 .pushy-left {
@@ -183,7 +338,6 @@
     -o-transform: translate3d(0, -80px, 0);
     transform: translate3d(0, -80px, 0);
 }
-
 /* Menu Transitions */
 
 .pushy,
@@ -196,7 +350,6 @@
     -o-transition: all .3s cubic-bezier(0.420, 0.000, 0.580, 1.000);
     transition: all .3s cubic-bezier(0.420, 0.000, 0.580, 1.000);
 }
-
 /* Site Overlay */
 
 .site-overlay {
