--- a/cometride-driverapp/DA/app/src/main/res/layout/activity_driver2.xml
+++ b/cometride-driverapp/DA/app/src/main/res/layout/activity_driver2.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#ffffffff"
-    tools:context="com.sandeep.da.Driver2">
+    tools:context="com.UTD.driverapp.Driver2">
 
     <TextView
         android:id="@+id/cometride"
