--- a/cometride-driverapp/DA/app/src/main/res/layout/activity_main.xml
+++ b/cometride-driverapp/DA/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.sandeep.da.MainActivity"
+tools:context="com.UTD.driverapp.MainActivity"
     android:background="#ffffffff"
 android:orientation="horizontal" >
 
