--- a/cometride-server/src/main/webapp/css/jquery.dynatable.css
+++ b/cometride-server/src/main/webapp/css/jquery.dynatable.css
@@ -10,12 +10,18 @@
  */
 th a {
   color: #fff;
+  text-decoration: none;
 }
 th a:hover {
   color: #fff;
-  text-decoration: underline;
+  text-decoration: none;
 }
-
+table td {
+   border: 1px solid black;
+}
+th{
+  background-color:#71AF5A;
+}
 .dynatable-search {
   float: right;
   margin-bottom: 10px;
