--- a/cometride-driverapp/DA/app/src/main/res/layout/activity_options.xml
+++ b/cometride-driverapp/DA/app/src/main/res/layout/activity_options.xml
@@ -97,7 +97,8 @@
         android:text="@string/continue_button"
         android:background="#ffc75c14"
         android:shadowColor="#b7ec6314"
-        android:textColor="#ffffffff" />
+        android:textColor="#ffffffff"
+        android:onClick="OpenDriver"/>
 
 
 </LinearLayout>
