--- a/cometride-riderapp/CometRider/res/values/styles.xml
+++ b/cometride-riderapp/CometRider/res/values/styles.xml
@@ -15,6 +15,14 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        
+         <item name="android:textViewStyle">@style/MyTextViewStyle</item>
     </style>
+   <style name="MyTextViewStyle" parent="android:Widget.TextView">
+    <item name="android:textSize">20sp</item>
+   </style>
+    
 
+    
+    
 </resources>
