--- a/cometride-server/src/main/webapp/css/styles.css
+++ b/cometride-server/src/main/webapp/css/styles.css
@@ -82,7 +82,7 @@ body {
 .navbar-collapse {
     max-height: 100px;
     padding-right: 15px;
-    padding-left: 15px;
+    padding-left: 0px;
     overflow-x: visible;
     -webkit-overflow-scrolling: touch;
     box-shadow: inset 0 100px 0 rgba(255, 255, 255, .1);
@@ -95,10 +95,12 @@ body {
 
 .nav>li {
     margin-top: -10px;
+    margin-left: 8px;
 }
 
 .nav li a {
     font-weight: 300;
+    font-size: 18px;
     letter-spacing: 1px;
 }
 
@@ -119,8 +121,14 @@ body {
     border: 0;
     cursor: pointer;
 }
+
 .nav #selectRoute {
-    margin-top: 4px;
+    margin-top: 0px;
+    font-size: 18px;
+    opacity: 0.8;
+}
+.nav #selectRoute:hover {
+    opacity: 1;
 }
 /* dropdown */
 /*.nav .dropdown.open a {
@@ -151,10 +159,10 @@ body {
     .nav li a {
         color: rgba(0, 0, 0, 0.6);
     }
-    /*.nav li select {
-        color: rgba(0, 0, 0, 0.6);
-        margin-left: 2em;
-    }*/
+    .nav #selectRoute {
+        margin-left: 1em;
+        margin-bottom: 1px;
+    }
     .navbar-default .nav li a:hover p,
     .navbar-shrink .nav li a:hover p {
         border-bottom: none;
