--- a/cometride-server/src/main/webapp/css/styles.css
+++ b/cometride-server/src/main/webapp/css/styles.css
@@ -13,6 +13,16 @@ body {
     overflow-x: hidden;
     font-size: 14px;
 }
+
+.alert {
+    position: fixed;
+    width: 40%;
+    left: 30%;
+    top: 40%;
+    z-index: 99999;
+    -webkit-box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.5);
+}
 /* navbar-default */
 
 .navbar-default {
@@ -123,36 +133,19 @@ body {
 }
 
 .nav #selectRoute {
-    margin-top: 1px;
+    margin-top: 3px;
     font-size: 17px;
     opacity: 0.8;
 }
-.nav #selectRoute:hover {
+
+.nav #selectRoute:hover,
+.nav #showAllRoutes:hover {
     opacity: 1;
 }
-/* dropdown */
-/*.nav .dropdown.open a {
-    background-color: transparent !important;
-}
 
-.nav .dropdown.open .dropdown-menu {
-    display: block;
-    width: 120%;
-    padding: 0px;
+.nav #showAllRoutes {
+    font-size: 17px;
 }
-
-.nav .dropdown.open .dropdown-menu li {
-    margin-right: 0px;
-}
-
-.nav .dropdown.open .dropdown-menu li:hover {
-    background-color: #C75B12;
-    transition: all .1s ease-in-out;
-}
-
-.nav .dropdown.open .dropdown-menu li a:hover {
-    color: #fff;
-}*/
 /* navbar-default media */
 
 @media only screen and (max-width: 768px) {
