--- a/cometride-server/src/main/webapp/css/styles.css
+++ b/cometride-server/src/main/webapp/css/styles.css
@@ -20,8 +20,9 @@ body {
     left: 30%;
     top: 40%;
     z-index: 99999;
-    -webkit-box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.5);
-    box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 6px 1px 45px -12px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 6px 1px 45px -12px rgba(0, 0, 0, 0.75);
+    box-shadow: 6px 1px 45px -12px rgba(0, 0, 0, 0.75);
 }
 /* navbar-default */
 
